--- a/.env
+++ b/.env
@@ -1,1 +1,41 @@
+# Engine5Go Security Configuration
+# Copy this file to .env and configure according to your needs
+
+# Basic Configuration
 E5_PORT=3535
+ENABLE_TLS=true
+REQUIRE_AUTH=true
+
+# TLS Configuration
+TLS_CERT_FILE=certs/server.crt
+TLS_KEY_FILE=certs/server.key
+TLS_CA_FILE=certs/ca.crt
+TLS_REQUIRE_CLIENT_AUTH=false
+TLS_SERVER_NAME=localhost
+
+# Authentication Configuration  
+AUTH_SECRET=your-super-secret-key-here-change-this-immediately
+TOKEN_EXPIRY_HOURS=24
+
+# Rate Limiting and Connection Management
+MAX_CONNECTIONS=1000
+CONNECTION_TIMEOUT=30
+DEFAULT_RATE_LIMIT=60
+
+# Client Permissions (JSON format)
+# Example: {"admin":{"can_publish":true,"can_subscribe":true,"can_request":true,"allowed_subjects":["*"],"rate_limit":120},"guest":{"can_publish":false,"can_subscribe":true,"can_request":false,"allowed_subjects":["public.*"],"rate_limit":30}}
+CLIENT_PERMISSIONS={"default":{"can_publish":true,"can_subscribe":true,"can_request":true,"allowed_subjects":["*"],"rate_limit":60}}
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+ENABLE_AUDIT_LOG=true
+
+# Security Headers and Features  
+ENABLE_CONNECTION_LOGGING=true
+ENABLE_IP_WHITELIST=false
+ALLOWED_IPS=127.0.0.1,::1
+
+# Development/Debug (NEVER enable in production)
+DEBUG_MODE=false
+DISABLE_SECURITY=false
