--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,24 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch File",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "dlvFlags": ["--check-go-version=false"],
-            "program": "."
-        }
-        // {
-        //     "name": "Launch Package",
-        //     "type": "go",
-        //     "request": "launch",
-        //     "mode": "auto",
-        //     "program": "${fileDirname}"
-        // }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch File",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "dlvFlags": ["--check-go-version=false"],
+      "program": ".",
+      "envFile": "${workspaceFolder}/.env"
+    }
+    // {
+    //     "name": "Launch Package",
+    //     "type": "go",
+    //     "request": "launch",
+    //     "mode": "auto",
+    //     "program": "${fileDirname}"
+    // }
+  ]
 }
