--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ TOKEN_EXPIRY_HOURS=24
 
 # Rate Limiting and Connection Management
 MAX_CONNECTIONS=1000
-CONNECTION_TIMEOUT=30
+CONNECTION_TIMEOUT=86400
 DEFAULT_RATE_LIMIT=60
 
 # Client Permissions (JSON format)
