--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 
 # Basic Configuration
 E5_PORT=3535
-ENABLE_TLS=true
-REQUIRE_AUTH=true
+ENABLE_TLS=false
+REQUIRE_AUTH=false
 
 # TLS Configuration
 TLS_CERT_FILE=certs/server.crt
