--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ REQUIRE_AUTH=false
 TLS_CERT_FILE=certs/server.crt
 TLS_KEY_FILE=certs/server.key
 TLS_CA_FILE=certs/ca.crt
-TLS_REQUIRE_CLIENT_AUTH=true
+ENABLE_AUTH=true
 TLS_SERVER_NAME=localhost
 
 # Authentication Configuration  
