--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ REQUIRE_AUTH=true
 TLS_CERT_FILE=./certs/server.crt
 TLS_KEY_FILE=./certs/server.key
 TLS_CA_FILE=./certs/ca.crt
-ENABLE_AUTH=false
+TLS_REQUIRE_CLIENT_AUTH=false
 TLS_SERVER_NAME=localhost
 
 # Authentication Configuration  
